[gd_scene load_steps=5 format=2]

[ext_resource path="res://nodes/SlotButtonNode.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/menus/SelectGameSlot.gd" type="Script" id=2]
[ext_resource path="res://fonts/CherokeeHandone-64.tres" type="DynamicFont" id=3]
[ext_resource path="res://ui/menus/BaseMenu.tscn" type="PackedScene" id=8]

[node name="SelectGameSlot" instance=ExtResource( 8 )]
script = ExtResource( 2 )

[node name="VBoxContainer" type="VBoxContainer" parent="." index="1"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Spacer_1" type="Control" parent="VBoxContainer" index="0"]
margin_top = 49.0
margin_right = 1920.0
margin_bottom = 49.0
size_flags_vertical = 6

[node name="HBoxContainer_1" type="HBoxContainer" parent="VBoxContainer" index="1"]
margin_top = 103.0
margin_right = 1920.0
margin_bottom = 771.0
size_flags_horizontal = 3
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer_left" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_1" index="0"]
margin_left = 212.0
margin_right = 745.0
margin_bottom = 668.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot_1" parent="VBoxContainer/HBoxContainer_1/VBoxContainer_left" index="0" instance=ExtResource( 1 )]
margin_left = 0.0
margin_right = 533.0

[node name="slot_2" parent="VBoxContainer/HBoxContainer_1/VBoxContainer_left" index="1" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 140.0
margin_right = 533.0
margin_bottom = 248.0

[node name="slot_3" parent="VBoxContainer/HBoxContainer_1/VBoxContainer_left" index="2" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 280.0
margin_right = 533.0
margin_bottom = 388.0

[node name="slot_4" parent="VBoxContainer/HBoxContainer_1/VBoxContainer_left" index="3" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 420.0
margin_right = 533.0
margin_bottom = 528.0

[node name="slot_5" parent="VBoxContainer/HBoxContainer_1/VBoxContainer_left" index="4" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 560.0
margin_right = 533.0
margin_bottom = 668.0

[node name="VBoxContainer_right" type="VBoxContainer" parent="VBoxContainer/HBoxContainer_1" index="1"]
margin_left = 1174.0
margin_right = 1707.0
margin_bottom = 668.0
size_flags_horizontal = 6
size_flags_vertical = 6
custom_constants/separation = 32
__meta__ = {
"_edit_use_anchors_": false
}

[node name="slot_6" parent="VBoxContainer/HBoxContainer_1/VBoxContainer_right" index="0" instance=ExtResource( 1 )]
margin_left = 0.0
margin_right = 533.0

[node name="slot_7" parent="VBoxContainer/HBoxContainer_1/VBoxContainer_right" index="1" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 140.0
margin_right = 533.0
margin_bottom = 248.0

[node name="slot_8" parent="VBoxContainer/HBoxContainer_1/VBoxContainer_right" index="2" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 280.0
margin_right = 533.0
margin_bottom = 388.0

[node name="slot_9" parent="VBoxContainer/HBoxContainer_1/VBoxContainer_right" index="3" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 420.0
margin_right = 533.0
margin_bottom = 528.0

[node name="slot_10" parent="VBoxContainer/HBoxContainer_1/VBoxContainer_right" index="4" instance=ExtResource( 1 )]
margin_left = 0.0
margin_top = 560.0
margin_right = 533.0
margin_bottom = 668.0

[node name="Spacer_2" type="Control" parent="VBoxContainer" index="2"]
margin_top = 824.0
margin_right = 1920.0
margin_bottom = 824.0
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBoxContainer_2" type="HBoxContainer" parent="VBoxContainer" index="3"]
margin_top = 889.0
margin_right = 1920.0
margin_bottom = 965.0
size_flags_horizontal = 3
size_flags_vertical = 6

[node name="Select" type="Label" parent="VBoxContainer/HBoxContainer_2" index="0"]
margin_right = 958.0
margin_bottom = 76.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.247059, 0.247059, 0.247059, 1 )
text = "[A] Select Slot"
align = 1

[node name="Erase" type="Label" parent="VBoxContainer/HBoxContainer_2" index="1"]
margin_left = 962.0
margin_right = 1920.0
margin_bottom = 76.0
size_flags_horizontal = 3
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.247059, 0.247059, 0.247059, 1 )
text = "[Y] Erase Slot"
align = 1

[node name="Spacer_3" type="Control" parent="VBoxContainer" index="4"]
margin_top = 1030.0
margin_right = 1920.0
margin_bottom = 1030.0
size_flags_vertical = 6
__meta__ = {
"_edit_use_anchors_": false
}
